tests/test-ingress.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: some-pdb
spec:
  selector:
    matchLabels:
      app: nginx
  minAvailable: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: some-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: app
          image: public.ecr.aws/nginx/nginx
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: some-service
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: some-ingress
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: some-service
                port:
                  name: http
            pathType: Exact
            path: /
